syntax = "proto3";
package histotyper_v2;

message TileSegmentationData {
  // Tile coordinates
  uint32 x = 1;
  uint32 y = 2;

  bytes cells_blob  = 3;  // zstd-compressed
  bytes tissue_blob = 4;  // zstd-compressed
}

message SlideSegmentationData {
  string slide_id   = 1;
  string slide_path = 2;
  float  mpp        = 3;

  // Maximum DeepZoom level available on the slide
  uint32 max_level  = 4;

  // DeepZoom level used for feature extraction (same for all tiles)
  uint32 level = 5;

  // Tile size (same for all tiles)
  uint32 tile_size = 6;

  string cell_model_name   = 7;
  string tissue_model_name = 8;

  // Global mappings (no per-cell strings)
  repeated string cell_class_names   = 9;   // index = class_id
  repeated string tissue_class_names = 10;  // index = class_id

  repeated TileSegmentationData tiles = 11;
}
